tests/fixtures/invalid/hex_list.py
# Cannot call hex() with List[int]
x = hex([1, 2, 3])
